--- a/weapp/pages/groupDetail/groupDetail.wxml
+++ b/weapp/pages/groupDetail/groupDetail.wxml
@@ -51,7 +51,7 @@
         <view class="weui-flex__item">
           <view class="placeholder">
             <text class="gg-time">拼团开始／结束时间：{{gData.ggData.start_time}} - {{gData.ggData.end_time}}</text>
-            <text class="offered">tips：已有<text class="offered-number">1{{ggInfo.numberPeople}}</text>人参团</text>
+            <text class="offered">tips：已有<text class="offered-number">「{{gData.gjData.count}}」</text>人参团</text>
           </view>
         </view>
       </view>
