--- a/wwwroot/apps/admin/views/layouts.html
+++ b/wwwroot/apps/admin/views/layouts.html
@@ -207,6 +207,27 @@
             <li class="site-menu-item has-sub active open">
               <a href="javascript:void(0)" data-slug="layout">
                 <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
+                <span class="site-menu-title">订单管理</span>
+                <span class="site-menu-arrow"></span>
+              </a>
+              <ul class="site-menu-sub">
+                <li class="site-menu-item">
+                  <a class="animsition-link" href="/admin/indent/index/itype/0" data-slug="layout-menu-collapsed">
+                    <i class="site-menu-icon " aria-hidden="true"></i>
+                    <span class="site-menu-title">普通订单列表</span>
+                  </a>
+                </li>
+                <li class="site-menu-item">
+                  <a class="animsition-link" href="/admin/indent/index/itype/1" data-slug="layout-menu-collapsed">
+                    <i class="site-menu-icon " aria-hidden="true"></i>
+                    <span class="site-menu-title">拼团订单列表</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="site-menu-item has-sub active open">
+              <a href="javascript:void(0)" data-slug="layout">
+                <i class="site-menu-icon wb-layout" aria-hidden="true"></i>
                 <span class="site-menu-title">Layouts</span>
                 <span class="site-menu-arrow"></span>
               </a>
