--- a/wwwroot/apps/admin/views/groupGoods/listSs.html
+++ b/wwwroot/apps/admin/views/groupGoods/listSs.html
@@ -45,7 +45,7 @@
                 <td><p class="text-success">{进行中}</p></td>
               {% endif %}
               <td>
-                <button type="button" class="btn btn-primary btn-xs" onclick="ggInfo({{ gid }})">查看详情</button>
+                <button type="button" class="btn btn-primary btn-xs" onclick="ggInfo({{ v.id }})">查看详情</button>
               </td>
             </tr>
           {% endfor %}
